Fix not showing saving loading phase of the button in GameSaveSettings

--- a/src/SaveIt.App/SaveIt.App.UI/Components/Pages/GameSaveSettings.razor.css
+++ b/src/SaveIt.App/SaveIt.App.UI/Components/Pages/GameSaveSettings.razor.css
@@ -1,7 +1,3 @@
 ﻿.custom-column {
     width: 45%;
 }
-
-.content-placeholder {
-    min-width: 25px;
-}
